add MTLbundle (news)

--- a/m-tourisme/app/config/routing.yml
+++ b/m-tourisme/app/config/routing.yml
@@ -1,3 +1,7 @@
+mtl_news:
+    resource: "@MTLBundle/Controller/NewsController.php"
+    type:     annotation
+
 admin:
     resource: "@AdminBundle/Controller/"
     type:     annotation
