--- a/m-tourisme/app/config/routing.yml
+++ b/m-tourisme/app/config/routing.yml
@@ -1,3 +1,7 @@
+admin_actu:
+    resource: "@AdminBundle/Controller/ActuController.php"
+    type:     annotation
+
 mtl_news:
     resource: "@MTLBundle/Controller/NewsController.php"
     type:     annotation
