add module Log in

--- a/m-tourisme/app/config/routing.yml
+++ b/m-tourisme/app/config/routing.yml
@@ -16,3 +16,5 @@ app:
     resource: "@AppBundle/Controller/"
     type:     annotation
 
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
