--- a/m-tourisme/app/config/parameters.yml.dist
+++ b/m-tourisme/app/config/parameters.yml.dist
@@ -12,8 +12,8 @@ parameters:
 
     mailer_transport:  smtp
     mailer_host:       127.0.0.1
-    mailer_user:       ~
-    mailer_password:   ~
+    mailer_user:       munier.louise
+    mailer_password:   munier/louise@gmail.com
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
