--- a/m-tourisme/app/config/config.yml
+++ b/m-tourisme/app/config/config.yml
@@ -9,7 +9,7 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
-    upload_directory: '%kernel.root_dir%/../web/upload/'
+    upload_directory: '%kernel.root_dir%/../www/upload/'
 
 framework:
     #esi:             ~
